@@ -1,3 +1,10 @@
+2009-02-05  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclStringObj.c (Tcl_AppendObjToObj): Special-case the
+	appending of one bytearray to another, which can be extremely rapid.
+	Part of scheme to address [Bug 1665628] by making the basic string
+	operations more efficient on byte arrays.
+
 2009-02-04  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c: Added overflow protections to the
